# pedigree4

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  docker-compose.demo.yml  orgchartagents.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: backend_task.md  docs_or_handoff_task.md  frontend_task.md
.github/workflows/: ci.yml
api/: openapi.yaml
apps/web/: app.html  demo-modern.html  direct-test.html  index.html  package.json  test-demo.html  tsconfig.json  vite.config.ts
db/neo4j/: constraints.cypher
db/postgres/: schema.sql
demo/: README.md  mock_server.py
demo/archived-claude-demo/: demo.html  index.html
demo/mock_data/: dataverse_bots.json  hris_employees.json  resources.json
demo/scripts/: seed_demo_data.py
docs/: README.md
docs/api/: Pedigree_Core_API_Spec.md
docs/architecture/: Pedigree_Data_Model_Schema.md  Pedigree_High_Level_Architecture.md  Pedigree_Microsoft_Copilot_Studio_Integration_Spec.md
docs/delivery/: CODE_REVIEW_FINDINGS.md  DEVELOPERS_LOG.md  IMPLEMENTATION_BACKLOG.md  Pedigree_90Day_Roadmap.md  Pedigree_Infrastructure_as_Code.md  Pedigree_Metrics_Dashboard_Definition.md  Pedigree_Test_Plan.md  Pedigree_Wesco_PoC_Playbook.md
docs/design/: pedigree_clickable_demo_and_website_design_spec.md
docs/for_dummies/: README.md  api_and_data_flow_for_dummies.md
docs/gtm/: Pedigree_How_It_Works_Explainer.md  Pedigree_Name_Finalization.md  (+2 more)
scripts/: validate_structure.py
services/api/: Dockerfile  pyproject.toml  requirements.txt
services/api/app/: demo_store.py  main.py  policy.py  schemas.py  settings.py
(+26 files in other folders)
