[project]
name = "pedigree-api"
version = "0.1.0"
description = "FastAPI backend for the Pedigree MVP demo."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "neo4j>=5.23.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
src = ["app"]
